--- a/main.css
+++ b/main.css
@@ -11,7 +11,12 @@ body, html {
 	align-items:center;
 	grid-template-columns: 1fr 3fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr;
-	background-color: rgba(100,100,100,0.5);
+	/* background-color: rgba(100,100,100,0.5); */
+}
+
+
+.largetext {
+	font-size:33pt;
 }
 
 .barbox {
@@ -20,7 +25,7 @@ body, html {
 	align-self:center;
 	/* justify-self:center; */
 	justify-self:stretch;
-	background-color:pink;
+	/* background-color:pink; */
 }
 
 .range-bar {
@@ -30,20 +35,33 @@ body, html {
 .descr {
 	/* flex:auto; */
 	margin:1em;
-	font-size:15pt;
+	font-size:30pt;
 }
 
 .pre-content {
 	grid-row: 2 / 3;
 	grid-column: 1 / 2;
 	justify-self:stretch;
-	background-color:blue;
+	/* background-color:blue; */
 	text-align:right;
 }
 .post-content {
 	grid-row: 2 / 3;
 	grid-column: 3 / 4;
 	justify-self:stretch;
-	background-color:green;
+	/* background-color:green; */
 	text-align:left;
 }
+
+.header-text {
+	grid-row: 1 / 2;
+	grid-column: 2/3;
+	text-align:center;
+}
+.footer-text {
+	grid-row: 3 / 4;
+	grid-column: 2/3;
+	text-align:center;
+}
+
+
