--- a/qb2/main.css
+++ b/qb2/main.css
@@ -29,8 +29,27 @@ body, html {
 	/* background-color:pink; */
 }
 
-.range-bar {
+input.range-bar {
 	width:100%;
+	-webkit-appearance: none;
+	background-color: #787878;
+	height:0.2cm;
+	border-radius:0px;
+	&::-webkit-slider-thumb {
+		-webkit-appearance: none;
+		background: white;
+		width: 0.8cm;
+		height: 0.8cm;
+		border: 1px solid black;
+		border-radius:0px;
+	}
+	&::-moz-range-thumb {
+		background: white;
+		width: 0.8cm;
+		height: 0.8cm;
+		border: 1px solid black;
+		border-radius:0px;
+	}
 }
 
 .descr {
