--- a/qb2/main.css
+++ b/qb2/main.css
@@ -29,6 +29,22 @@ body, html {
 	/* background-color:pink; */
 }
 
+#participantID {
+	font-size:23px;
+}
+
+.center-cell {
+	grid-row: 2 / 3;
+	grid-column: 2 / 3;
+	align-self:center;
+	justify-self:center;
+}
+
+.weaktext {
+	font-size:12px;
+	color: #666;
+}
+
 input.range-bar {
 	width:100%;
 	-webkit-appearance: none;
